#70136: Use pack200 to decrease installer size.