@@ -19,6 +19,8 @@ Microsystems, Inc. All Rights Reserved.
   <property name="storage.builder" location="../../java/storagebuilder/dist/storagebuilder.jar"/>
   <property name="preparse.files" location="../../java/storagebuilder/preparse-files.txt"/>
   <property name="nb.dir" location="../../nbbuild/netbeans"/>
+  <property name="nb.dir.tmp" location="build/netbeans" />
+  <property name="nb.dir.test" location="build/netbeans-test" />
  
   <target name="init" depends="set-buildnumber, set-installer.basename" unless="inited">
     <property name="inited" value="true" />
@@ -32,6 +34,27 @@ Microsystems, Inc. All Rights Reserved.
       <copy todir="." failonerror="false">
           <fileset dir="../../translatedfiles/src/installer/jdkbundle"/>
       </copy>
+  </target>
+  
+  <!-- Copy NetBeans files to temporary dir where jars will be packed. Use native cp to preserve file attributes. -->
+  <target name="copy-netbeans">
+    <mkdir dir="${nb.dir.tmp}"/>
+    <exec os="Linux SunOS" executable="./copy-nbdir">
+      <arg line="${nb.dir}/* ${nb.dir.tmp}"/>
+    </exec>
+  </target>
+
+  <!-- Copy NetBeans files to test dir where jars will be unpacked and veryfied. Use native cp to preserve file attributes. -->
+  <target name="copy-netbeans-test">
+    <mkdir dir="${nb.dir.test}"/>
+    <exec os="Linux SunOS" executable="./copy-nbdir">
+      <arg line="${nb.dir.tmp}/* ${nb.dir.test}"/>
+    </exec>
+  </target>
+
+  <!-- Delete temporary netbeans directory used to pak jars -->
+  <target name="delete-netbeans-tmp">
+    <delete dir="${nb.dir.tmp}"/>
   </target>
   
   <target name="set-ismp.cp" unless="ismp.cp-set">
@@ -97,7 +120,7 @@ Microsystems, Inc. All Rights Reserved.
         <arg value="-alias"/>
         <arg value="basedir=${basedir}"/>
         <arg value="-alias"/>
-        <arg value="nb.dir=${nb.dir}"/>
+        <arg value="nb.dir=${nb.dir.tmp}"/>
         <arg value="-alias"/>
         <arg value="jdk.installer=${jdk.installer}"/>
         <arg value="-alias"/>
@@ -116,7 +139,8 @@ Microsystems, Inc. All Rights Reserved.
     </sequential>
   </macrodef>
   
-  <target name="build-linux" depends="init, compile">
+  <target name="build-linux" 
+          depends="init, compile, delete-netbeans-tmp, copy-netbeans, run-pack">
     <copy file="scripts/j2se-install.template" tofile="build/scripts/_uninst/j2se-install.template"/>
     <copy file="scripts/j2se-uninstall.template" tofile="build/scripts/_uninst/j2se-uninstall.template"/>
     <copy file="${preparse.files}"
@@ -127,7 +151,8 @@ Microsystems, Inc. All Rights Reserved.
     <move file="build/disk1/setuplinux.bin" tofile="dist/${installer.basename}-linux.bin"/>
   </target>
   
-  <target name="build-linux-ml" depends="init-ml, compile, xsl-linux-ml">
+  <target name="build-linux-ml" 
+          depends="init-ml, compile, xsl-linux-ml, delete-netbeans-tmp, copy-netbeans, run-pack">
     <copy file="scripts/j2se-install.template" tofile="build/scripts/_uninst/j2se-install.template"/>
     <copy file="scripts/j2se-uninstall.template" tofile="build/scripts/_uninst/j2se-uninstall.template"/>
     <copy file="${preparse.files}"
@@ -139,7 +164,8 @@ Microsystems, Inc. All Rights Reserved.
     <delete file="jdk-linux-ml.uip"/>
   </target>
 
-  <target name="build-solaris-sparc" depends="init, compile">
+  <target name="build-solaris-sparc" 
+          depends="init, compile, delete-netbeans-tmp, copy-netbeans, run-pack">
     <copy file="scripts/j2se-install.template" tofile="build/scripts/_uninst/j2se-install.template"/>
     <copy file="scripts/j2se-uninstall.template" tofile="build/scripts/_uninst/j2se-uninstall.template"/>
     <copy file="${preparse.files}"
@@ -150,7 +176,8 @@ Microsystems, Inc. All Rights Reserved.
     <move file="build/disk1/setupSolarisSparc.bin" tofile="dist/${installer.basename}-solsparc.bin"/>
   </target>
   
-  <target name="build-solaris-sparc-ml" depends="init-ml, compile, xsl-solaris-sparc-ml">
+  <target name="build-solaris-sparc-ml" 
+          depends="init-ml, compile, xsl-solaris-sparc-ml, delete-netbeans-tmp, copy-netbeans, run-pack">
     <copy file="scripts/j2se-install.template" tofile="build/scripts/_uninst/j2se-install.template"/>
     <copy file="scripts/j2se-uninstall.template" tofile="build/scripts/_uninst/j2se-uninstall.template"/>
     <copy file="${preparse.files}"
@@ -162,7 +189,8 @@ Microsystems, Inc. All Rights Reserved.
     <delete file="jdk-solaris-sparc-ml.uip"/>
   </target>
 
-  <target name="build-solaris-x86" depends="init, compile">
+  <target name="build-solaris-x86" 
+          depends="init, compile, delete-netbeans-tmp, copy-netbeans, run-pack">
     <copy file="scripts/j2se-install.template" tofile="build/scripts/_uninst/j2se-install.template"/>
     <copy file="scripts/j2se-uninstall.template" tofile="build/scripts/_uninst/j2se-uninstall.template"/>
     <copy file="${preparse.files}"
@@ -173,7 +201,8 @@ Microsystems, Inc. All Rights Reserved.
     <move file="build/disk1/setupSolarisX86.bin" tofile="dist/${installer.basename}-solx86.bin"/>
   </target>
   
-  <target name="build-solaris-x86-ml" depends="init-ml, compile, xsl-solaris-x86-ml">
+  <target name="build-solaris-x86-ml" 
+          depends="init-ml, compile, xsl-solaris-x86-ml, delete-netbeans-tmp, copy-netbeans, run-pack">
     <copy file="scripts/j2se-install.template" tofile="build/scripts/_uninst/j2se-install.template"/>
     <copy file="scripts/j2se-uninstall.template" tofile="build/scripts/_uninst/j2se-uninstall.template"/>
     <copy file="${preparse.files}"
@@ -185,7 +214,8 @@ Microsystems, Inc. All Rights Reserved.
     <delete file="jdk-solaris-x86-ml.uip"/>
   </target>
 
-  <target name="build-windows" depends="init, compile">
+  <target name="build-windows" 
+          depends="init, compile, delete-netbeans-tmp, copy-netbeans, run-pack">
     <copy file="scripts/custom-install-jdk.template" tofile="build/scripts/_uninst/custom-install-jdk.template"/>
     <copy file="scripts/custom-install-jre.template" tofile="build/scripts/_uninst/custom-install-jre.template"/>
     <copy file="${preparse.files}"
@@ -196,7 +226,8 @@ Microsystems, Inc. All Rights Reserved.
     <move file="build/disk1/setupwin32.exe" tofile="dist/${installer.basename}-win.exe"/>
   </target>
   
-  <target name="build-windows-ml" depends="init-ml, compile, xsl-windows-ml">
+  <target name="build-windows-ml" 
+          depends="init-ml, compile, xsl-windows-ml, delete-netbeans-tmp, copy-netbeans, run-pack">
     <copy file="scripts/custom-install-jdk.template" tofile="build/scripts/_uninst/custom-install-jdk.template"/>
     <copy file="scripts/custom-install-jre.template" tofile="build/scripts/_uninst/custom-install-jre.template"/>
     <copy file="${preparse.files}"
@@ -208,7 +239,8 @@ Microsystems, Inc. All Rights Reserved.
     <delete file="jdk-windows-ml.uip"/>
   </target>
  
-  <target name="compile" depends="init, build-libbean, build-libutil14, build-libutil15" description="compile custom beans and panels">
+  <target name="compile" depends="init, build-libbean, build-libutil14, build-libutil15" 
+          description="compile custom beans and panels">
     <mkdir dir="build/classes"/>
     
     <javac destdir="build/classes" srcdir="src" source="1.4" target="1.4" debug="true" deprecation="true">
@@ -282,6 +314,58 @@ Microsystems, Inc. All Rights Reserved.
   
   <target name="ismp" depends="init, compile" description="launch ISMP IDE">
     <exec os="Linux" command="sh -c &quot;${ismp.home}/ismp &amp;&quot;" />
+  </target>
+  
+  <target name="compile-pack" description="Compile class for compressing jars">
+    <mkdir dir="../lib/packjars/classes"/>
+    <javac destdir="../lib/packjars/classes" srcdir="../lib/packjars/src" source="1.5" target="1.5" debug="true" deprecation="true">
+    </javac>
+  </target>
+
+    <target name="run-pack" depends="compile-pack" description="Pack jars">
+        <java classname="org.netbeans.installer.PackJars" fork="true" failonerror="true">
+            <jvmarg value="-Xmx256m" />
+            <arg value="${nb.dir.tmp}" />
+            <arg value="${basedir}/build/netbeans/_uninst/packedjars.xml" />
+            <classpath>
+                <pathelement path="../lib/packjars/classes"/>
+            </classpath>
+        </java>
+    </target>
+
+  <target name="run-unpack" depends="compile-pack" description="Unpack jars">
+      <java classname="org.netbeans.installer.UnpackJars" fork="true" failonerror="true">
+        <jvmarg value="-Xmx256m" />
+        <arg value="${nb.dir.test}" />
+        <classpath>
+          <pathelement path="../lib/packjars/classes"/>
+        </classpath>
+      </java>
+  </target>
+
+  <target name="run-verify" depends="compile-pack" description="Verify jars">
+      <java classname="org.netbeans.installer.VerifyJars" fork="true" failonerror="true">
+        <jvmarg value="-Xmx256m" />
+        <jvmarg value="-XX:PermSize=128m" />
+        <arg value="${nb.dir.test}" />
+        <arg value="0" />
+        <classpath>
+          <pathelement path="../lib/packjars/classes"/>
+        </classpath>
+      </java>
+      <java classname="org.netbeans.installer.VerifyJars" fork="true" failonerror="true">
+        <jvmarg value="-Xmx256m" />
+        <jvmarg value="-XX:PermSize=128m" />
+        <arg value="${nb.dir.test}" />
+        <arg value="1" />
+        <classpath>
+          <pathelement path="../lib/packjars/classes"/>
+        </classpath>
+      </java>
+  </target>
+
+  <target name="clean-pack" description="Clean class for compressing jars">
+    <delete dir="../lib/packjars/classes"/>
   </target>
   
 </project>
